# aionetx

./: .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  infrastructure.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: architecture.md  lifecycle.md  logging.md  platform_notes.md  reproducible_build.md  roadmap.md  timing_and_latency.md
docs/breaking_changes/: README.md
examples/: README.md  backpressure_policies.py  tcp_echo_server_and_client.py  tcp_framing_length_prefix.py  tcp_reconnect_with_heartbeat.py  udp_round_trip.py
requirements/: ci-build-tools.in  ci-build-tools.txt  ci-dev-tools.in  ci-dev-tools.txt
scripts/ci/: _port_helpers.py  assert_integration_semantic_shard.py  check_distribution_artifacts.py  check_release_codeql_gate.py  check_release_dependency_gate.py  check_sha_pins.py  examples_smoke.py  install_single_artifact.py  installed_artifact_semantic_minisuite.py  installed_artifact_smoke.py  validate_release_provenance.py
src/aionetx/: __init__.py
tests/: conftest.py  helpers.py  internal_asyncio_impl_refs.py
tests/integration/: test_client_reconnect.py  test_concurrency_scenarios.py  test_event_delivery_performance.py  test_heartbeat_integration.py  test_lifecycle_invariants.py  test_multicast_receiver.py  test_on_event_payload_contract.py  test_readme_quick_start_examples.py  test_runtime_property_based.py  test_stress.py  test_tcp_client_server.py  test_udp_transport.py
tests/unit/: test_api_symbol_sources.py  test_assert_integration_semantic_shard_script.py  test_async_context_manager.py  test_asyncio_future_diagnostics_guard.py  test_asyncio_heartbeat_sender.py  test_asyncio_multicast_receiver_startup_cleanup.py  test_asyncio_network_factory.py  test_asyncio_tcp_client_internals.py  test_asyncio_tcp_connection.py  test_asyncio_tcp_server.py  test_asyncio_udp_transport.py  test_base_network_event_handler.py  test_check_distribution_artifacts_script.py  test_check_sha_pins_script.py  test_ci_workflow_dependency_review_gate.py  test_datagram_receiver_state.py  test_event_dispatcher_contract.py  test_event_dispatcher_queue.py  test_event_identity_resource_id.py  test_event_registry_consistency.py  test_heartbeat_validation.py  test_hypothesis_optional_dependency.py  test_identifier_schema.py  test_installed_artifact_port_helpers.py  test_installed_artifact_script_import_boundaries.py  test_lifecycle_guards.py  test_lifecycle_publication.py  test_logging_utils.py  test_logging_visibility.py  test_owner_loop_guard.py  test_package_exports.py  test_reconnect_backoff.py  test_release_codeql_gate_script.py  test_release_dependency_gate_script.py  test_release_workflow_structure.py  test_runtime_utils.py  test_settings.py  test_settings_property_based.py  (+10 more)
(+68 files in other folders)
